--- a/static/partials/productDisplayPanel.html
+++ b/static/partials/productDisplayPanel.html
@@ -1,62 +1,80 @@
 <div id="productDisplayPanel">
-    <div class="productDisplayPanelHeader">
-        <a ui-sref="home" style="font-size: 40px; position: absolute; left: 5%; top: 0; color: white">Futrena</a>
-        <a href="" style="color: white; position: absolute; right: 250px; font-size: 25px">User</a>
-    </div>
-    <div class="productMainImage"  ng-click="currentImageUrl='/images/car1.jpeg'">
-        <img src={{currentImageUrl}} height="100%" width="100%">
-    </div>
+	<div class="productDisplayPanelHeader">
+		<a ui-sref="home"
+			style="font-size: 40px; position: absolute; left: 5%; top: 0; color: white">Futrena</a>
+		<a href=""
+			style="color: white; position: absolute; right: 250px; font-size: 25px">User</a>
+	</div>
+	<div class="productMainImage"
+		ng-click="currentImageUrl='/images/car1.jpeg'">
+		<img src={{currentImageUrl}} height="100%" width="100%">
+	</div>
 
-    <div style="margin-top: 10px; margin-left: 5%">
-        <div class="productSmallImage" style="margin-left: 0" ng-click="currentImageUrl='/images/car2.jpeg'">
-            <img src="/images/car2.jpeg" height="100%" width="100%">
-        </div>
-        <div class="productSmallImage" ng-click="currentImageUrl='/images/car3.jpeg'">
-            <img src="/images/car3.jpeg" height="100%" width="100%">
-        </div>
-        <div class="productSmallImage" ng-click="currentImageUrl='/images/car4.jpeg'">
-            <img src="/images/car4.jpeg" height="100%" width="100%">
-        </div>
-        <div class="productSmallImage" ng-click="currentImageUrl='/images/car5.jpeg'">
-            <img src="/images/car5.jpeg" height="100%" width="100%">
-        </div>
-    </div>
+	<div style="margin-top: 10px; margin-left: 5%">
+		<div class="productSmallImage" style="margin-left: 0"
+			ng-click="currentImageUrl='/images/car2.jpeg'">
+			<img src="/images/car2.jpeg" height="100%" width="100%">
+		</div>
+		<div class="productSmallImage"
+			ng-click="currentImageUrl='/images/car3.jpeg'">
+			<img src="/images/car3.jpeg" height="100%" width="100%">
+		</div>
+		<div class="productSmallImage"
+			ng-click="currentImageUrl='/images/car4.jpeg'">
+			<img src="/images/car4.jpeg" height="100%" width="100%">
+		</div>
+		<div class="productSmallImage"
+			ng-click="currentImageUrl='/images/car5.jpeg'">
+			<img src="/images/car5.jpeg" height="100%" width="100%">
+		</div>
+	</div>
 
-    <div class="productInfo">
-        <div class="productTitle"><h2 style="font-weight: 300">{{showProduct.productName}}</h2></div>
-        <div class="releasedDate">
-            <p>{{showProduct.createDate | date : "medium"}}</p>
-        </div>
+	<div class="productInfo">
+		<div class="productTitle">
+			<h2 style="font-weight: 300">{{showProduct.productName}}</h2>
+		</div>
+		<div class="releasedDate">
+			<p>{{showProduct.createDate | date : "medium"}}</p>
+		</div>
 
-        <div class="shipment">
-            <p>Declaration: </p>
-        </div>
-        <div class="productQuantity">
-            <p><span>{{showProduct.availableAmount}}</span>  Available</p>
-        </div>
-        <div class="productPrice">
-            <p>Price: {{showProduct.price}}$</p>
-        </div>
-        <p style="font-size: 20px">Quantity:</p><select></select><br>
-        <br>
-        <button ng-click="addToCart()" class="btn btn-success">Add to Cart</button>
-        <button class="btn btn-primary" style="margin-left: 100px;">Add to Wishlist</button>
-    </div>
+		<div class="shipment">
+			<p>Declaration:</p>
+		</div>
+		<div class="productQuantity">
+			<p>
+				<span>{{showProduct.availableAmount}}</span> Available
+			</p>
+		</div>
+		<div class="productPrice">
+			<p>Price: {{showProduct.price}}$</p>
+		</div>
+		<p style="font-size: 20px">Quantity:</p>
+		<select></select><br><br> 
+		
+		<a ng-click="addFavourate()" ng-show="inFavourates == false"><i class="fa fa-heart fa-2x"><i style="font-size: 15px">Wishlist</i></i></a>
+		<a ng-click="removeFavourate()" ng-show="inFavourates == true"><i class="fa fa-heart-o fa-2x"><i style="font-size: 15px">Wishlist</i></i></a> 
+		<a style="margin-left: 20px" data-toggle="popover"><i class="fa fa-share-alt fa-2x"><i style="font-size: 15px">Distribute</i></i></a>
 
-    <div class="productDetail">
-    <div class="productDescription">
-        <h3 style="font-weight: 100">Description: </h3>
-        <p style="word-break: normal">{{showProduct.description}}</p>
-    </div><br>
+		<br><button ng-click="addToCart()" class="btn btn-success" style="margin-left: 70%;width: 150px">Add to Cart</button>
+	</div>
 
-    <div class="productSpecification">
-        <h3 style="font-weight: 100">Specification:</h3><br>
-        <P>Height: {{showProduct.height}}</P>
-        <P>Length: {{showProduct.length}}</P>
-        <p>Width: {{showProduct.width}}</p>
-        <P>Material: {{showProduct.material}}</P>
-    </div>
-    </div>
+	<div class="productDetail">
+		<div class="productDescription">
+			<h3 style="font-weight: 100">Description:</h3>
+			<p style="word-break: normal">{{showProduct.description}}</p>
+		</div>
+		<br>
 
-    <iframe style="position: relative; left: 64px; top: 30px;" width="610" height="400" src={{videoUrl}} frameborder="0" allowfullscreen></iframe>
+		<div class="productSpecification">
+			<h3 style="font-weight: 100">Specification:</h3>
+			<br>
+			<P>Height: {{showProduct.height}}</P>
+			<P>Length: {{showProduct.length}}</P>
+			<p>Width: {{showProduct.width}}</p>
+			<P>Material: {{showProduct.material}}</P>
+		</div>
+	</div>
+
+	<iframe style="position: relative; left: 64px; top: 30px;" width="610"
+		height="400" src={{videoUrl}} frameborder="0" allowfullscreen></iframe>
 </div>
