--- a/static/partials/productAdminPage.html
+++ b/static/partials/productAdminPage.html
@@ -139,7 +139,7 @@
             <div class="form-group">
                 <label class="col-sm-3" style="margin-left: 10px">Owner:</label>
                 <div class="col-sm-5">
-                <input type="email" class="form-control" placeholder="" ng-model="previewProduct.owner"
+                <input type="text" class="form-control" placeholder="" ng-model="previewProduct.owner"
                        required>
                 </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="form-group">
                 <label class="col-sm-3" style="margin-left: 10px">Regular User:</label>
                 <div class="col-sm-5">
-                    <input type="email" class="form-control" placeholder="" ng-model="previewProduct.regular"
+                    <input type="text" class="form-control" placeholder="" ng-model="previewProduct.regular"
                            required>
                 </div>
             </div>
