--- a/static/partials/productPreview.html
+++ b/static/partials/productPreview.html
@@ -3,26 +3,31 @@
         <p style="position: absolute; left: 5%; font-size: 25px" >Product Preview</p>
         <button ng-click="back()" class="btn btn-primary" style="position: absolute; left: 30%">Go back to Editor</button>
         <p style="font-size: 40px; position: absolute; left: 46%; top: 0">Futrena</p>
-        <button ng-click="submit()" style="position: absolute; left: 60%; width: 140px" class="btn btn-success">Submit</button>
+        <a ng-click="submit()" style="position: absolute; left: 60%; width: 140px" class="btn btn-success">Submit</a>
     </div>
-    <div class="productMainImage"  ng-click="currentImageUrl='/images/car1.jpeg'">
-        <img src={{currentImageUrl}} height="100%" width="100%">
-    </div>
+	<div class="productMainImage"
+		ng-click="currentImageUrl='/UploadImages/'+previewProduct.productID+'0.jpeg'">
+		<img src={{currentImageUrl}} height="100%" width="100%">
+	</div>
 
-    <div style="margin-top: 10px; margin-left: 5%">
-    <div class="productSmallImage" style="margin-left: 0" ng-click="currentImageUrl='/images/car2.jpeg'">
-        <img src="/images/car2.jpeg" height="100%" width="100%">
-    </div>
-    <div class="productSmallImage" ng-click="currentImageUrl='/images/car3.jpeg'">
-        <img src="/images/car3.jpeg" height="100%" width="100%">
-    </div>
-    <div class="productSmallImage" ng-click="currentImageUrl='/images/car4.jpeg'">
-        <img src="/images/car4.jpeg" height="100%" width="100%">
-    </div>
-    <div class="productSmallImage" ng-click="currentImageUrl='/images/car5.jpeg'">
-        <img src="/images/car5.jpeg" height="100%" width="100%">
-    </div>
-    </div>
+	<div style="margin-top: 10px; margin-left: 5%">
+		<div class="productSmallImage" style="margin-left: 0"
+			ng-click="currentImageUrl='/UploadImages/'+previewProduct.productID+'1.jpeg'">
+			<img src={{imgurl1}} height="100%" width="100%">
+		</div>
+		<div class="productSmallImage"
+			ng-click="currentImageUrl='/UploadImages/'+previewProduct.productID+'2.jpeg'">
+			<img src={{imgurl2}} height="100%" width="100%">
+		</div>
+		<div class="productSmallImage"
+			ng-click="currentImageUrl='/UploadImages/'+previewProduct.productID+'3.jpeg'">
+			<img src={{imgurl3}} height="100%" width="100%">
+		</div>
+		<div class="productSmallImage"
+			ng-click="currentImageUrl='/UploadImages/'+previewProduct.productID+'4.jpeg'">
+			<img src={{imgurl4}} height="100%" width="100%">
+		</div>
+	</div>
 
     <div class="productInfo">
 
