--- a/static/css/app.css
+++ b/static/css/app.css
@@ -21,6 +21,28 @@
 	display: inline-block;
 }
 
+#submitWantedButton{
+	color:rgb(255,153,0);
+	text-decoration: none;
+	float:left;
+	margin-left:30px;
+}
+
+#submitWantedButton div{
+	display:inline-block;
+	height:50px;
+	cursor: pointer;
+	padding-top: 12px;
+	padding-left:5px;
+	padding-right:5px;
+	border-radius:5px;
+}
+
+#submitWantedButton :hover{
+	background-color: rgba(255,255,230,0.5);
+}
+
+
 #previous{
 	padding-left:10px;
 	padding-right:10px;
@@ -56,17 +78,6 @@
 .content:nth-child(4){
 	display:none;
 }
-
-#next:hover{
-	background-color:rgba(255,255,220,0.4);
-	color:rgba(255,255,220,0.8);
-}
-
-#previous:hover{
-	background-color:rgba(255,255,220,0.4);
-	color:rgba(255,255,220,0.8);
-}
-
 #submit{
 	color:rgb(255,153,0);
 	text-decoration: none;
@@ -88,14 +99,37 @@
 	background-color: rgba(255,255,230,0.5);
 }
 
-#webName{
+.webName{
 	color:rgb(255,153,0);
 	text-decoration: none;
-	margin-left:-8%;
+	margin-left:-20%;
 	display:none;
 }
 
-#webName div{
+.webName div{
+	display:inline-block;
+	height:50px;
+	cursor: pointer;
+	font-size:40px;
+	padding-left:5px;
+	padding-right:5px;
+	border-radius:10px;
+}
+
+.webName div:hover{
+	background-color: rgba(132,132,132,0.2);
+}
+
+.webName:visited{
+	color:rgba(255,153,0,0.4);
+}
+
+.webName1{
+	color:rgb(255,153,0);
+	text-decoration: none;
+}
+
+.webName1 div{
 	display:inline-block;
 	height:50px;
 	cursor: pointer;
@@ -105,8 +139,12 @@
 	border-radius:10px;
 }
 
-#webName :hover{
+.webName1 :hover{
 	background-color: rgba(132,132,132,0.2);
+}
+
+.webName1:visited{
+	color:rgba(255,153,0,0.4);
 }
 
 /*#login{
@@ -172,7 +210,7 @@
 
 .overlay{
 	position:fixed; 
-	background:rgba(0,0,0,0.6); 
+	background:rgba(255,255,255,0); 
 	z-index:5; 
 	width:100%; 
 	height:100%;
@@ -190,8 +228,8 @@
 	top: 40px;
 }
 
-#homeNav{
-	background-color: rgb(32,32,32);
+.homeNav{
+	background-color: #1a2933;
 	top:0;
 	width:100%;
 	height:50px;
@@ -275,8 +313,8 @@
 
 #home .viewNavigator .link {
 	text-decoration: none;
-	margin-left: 150px;
-	margin-right: 150px;
+	margin-left: 80px;
+	margin-right: 80px;
 	color:rgb(255,153,0);
 	padding-bottom: 27px;
 }
@@ -290,6 +328,10 @@
 .filter{
 	cursor: pointer;
 	color:rgb(255,153,0)
+}
+
+.filter:hover{
+	color:rgba(255,153,0,0.4)
 }
 
 #home .viewNavigator .unselected {
