--- a/static/css/product.css
+++ b/static/css/product.css
@@ -53,7 +53,6 @@
 
 
 .productInfo {
-
     width: 35%;
     height: 525px;
     position: fixed;
@@ -107,8 +106,16 @@
 }
 
 #product {
-	width: 350px;
-    height: 300px;
+	width: 520px;
+    height: 450px;
+    background-color: black;
+    text-align: center;
+    color: white;
+}
+
+#userProduct {
+	width: 150px;
+    height: 150px;
     background-color: black;
     text-align: center;
     color: white;
@@ -116,8 +123,15 @@
 
 #product .image {
 	width: 100%;
-	height: 85%;
+	height: 100%;
 }
+
+#product .image:hover{
+	cursor: pointer;
+}
+
+
+
 
 
 
