--- a/static/partials/productDisplayPanel.html
+++ b/static/partials/productDisplayPanel.html
@@ -2,30 +2,29 @@
 	<div class="productDisplayPanelHeader">
 		<a ui-sref="home"
 			style="font-size: 40px; position: absolute; left: 5%; top: 0; color: white">Futrena</a>
-		<a href=""
-			style="color: white; position: absolute; right: 250px; font-size: 25px">User</a>
+		<a ui-sref="user({email: currentUser})" style="color: orange; font-size: 30px;position: absolute; right: 10%; top: 10px"><div><i class="fa fa-user"></i>  {{currentUser}}</div></a>
 	</div>
 	<div class="productMainImage"
-		ng-click="currentImageUrl='/images/car1.jpeg'">
+		ng-click="currentImageUrl='/UploadImages/'+showProduct.productID+'0.jpeg'">
 		<img src={{currentImageUrl}} height="100%" width="100%">
 	</div>
 
 	<div style="margin-top: 10px; margin-left: 5%">
 		<div class="productSmallImage" style="margin-left: 0"
-			ng-click="currentImageUrl='/images/car2.jpeg'">
-			<img src="/images/car2.jpeg" height="100%" width="100%">
+			ng-click="currentImageUrl='/UploadImages/'+showProduct.productID+'1.jpeg'">
+			<img src={{imgurl1}} height="100%" width="100%">
 		</div>
 		<div class="productSmallImage"
-			ng-click="currentImageUrl='/images/car3.jpeg'">
-			<img src="/images/car3.jpeg" height="100%" width="100%">
+			ng-click="currentImageUrl='/UploadImages/'+showProduct.productID+'2.jpeg'">
+			<img src={{imgurl2}} height="100%" width="100%">
 		</div>
 		<div class="productSmallImage"
-			ng-click="currentImageUrl='/images/car4.jpeg'">
-			<img src="/images/car4.jpeg" height="100%" width="100%">
+			ng-click="currentImageUrl='/UploadImages/'+showProduct.productID+'3.jpeg'">
+			<img src={{imgurl3}} height="100%" width="100%">
 		</div>
 		<div class="productSmallImage"
-			ng-click="currentImageUrl='/images/car5.jpeg'">
-			<img src="/images/car5.jpeg" height="100%" width="100%">
+			ng-click="currentImageUrl='/UploadImages/'+showProduct.productID+'4.jpeg'">
+			<img src={{imgurl4}} height="100%" width="100%">
 		</div>
 	</div>
 
@@ -46,14 +45,15 @@
 			</p>
 		</div>
 		<div class="productPrice">
-			<p>Price: {{showProduct.price}}$</p>
+			<p>Price: ${{showProduct.price}}</p>
 		</div>
 		<p style="font-size: 20px">Quantity:</p>
 		<select></select><br><br> 
 		
-		<a ng-click="addFavourate()" ng-show="inFavourates == false"><i class="fa fa-heart fa-2x"><i style="font-size: 15px">Wishlist</i></i></a>
-		<a ng-click="removeFavourate()" ng-show="inFavourates == true"><i class="fa fa-heart-o fa-2x"><i style="font-size: 15px">Wishlist</i></i></a> 
+		<a ng-click="addFavourate()" ng-show="inFavourates == false"><i class="fa fa-heart-o fa-2x"><i style="font-size: 15px">Wishlist</i></i></a>
+		<a ng-click="removeFavourate()" ng-show="inFavourates == true"><i class="fa fa-heart fa-2x"><i style="font-size: 15px">Wishlist</i></i></a> 
 		<a style="margin-left: 20px" data-toggle="popover"><i class="fa fa-share-alt fa-2x"><i style="font-size: 15px">Distribute</i></i></a>
+		<br><br><a><i class="fa fa-star"><i style="font-size: 10px">Learn Distribute to earn lifetime INCOME </i></i></a>
 
 		<br><button ng-click="addToCart()" class="btn btn-success" style="margin-left: 70%;width: 150px">Add to Cart</button>
 	</div>
